# InstiGPT

./: .gitignore  Pipfile  README.md  docker-compose.yml  nginx.conf
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Examples.md  Pipfile  README_MIGRATIONS.md  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20241031_0001_initial_schema.py
backend/data/: itc_iitb.txt  ugrulebook.json
backend/data/csv/: elec_damp_intern.csv  elec_damp_minor.csv  elec_damp_project%20-%20Sheet1.csv  mech_damp_courses_scrap%20-%20Sheet1.csv  mech_damp_events_scrap%20-%20Sheet1.csv
backend/data/json/: grades.json  itc.json  misc_web_scrap.json  resobin_courses.json
backend/data/urls/: dept_urls.json  smp.json
backend/data/website_scrapes/: Civil%20DAMP%20-%20Sheet1.csv  SMPwebWEBLOADER.csv  aeroDamp.csv  aeroDept.csv  bioDept.csv  chedamp.csv  chemicalDeptWEBLOADER.csv  chemistryDeptWEBLOADER.csv  civilDeptWEBLOADER.csv  csedamp.csv  earthDeptWEBLOADER.csv  ecoDept.csv  elecDamp.csv  electDeptWEBLOADER.csv  envDeptWEBLOADER.csv  esedampWEBLOADER.csv  hssDept.csv  mathsDeptWEBLOADER.csv  mechDeptWEBLOADER.csv  memsdamp.csv
backend/instigpt/: api.py  config.py  embeddings.py  generator.py  input_models.py  retriever.py  scratch.py
backend/instigpt/api/: __init__.py  auth.py  conversation.py  helpers.py  input_models.py
backend/instigpt/data_loaders/: __init__.py  __main__.py  automated_data_loading.py  clean_html.py  csv.py  html.py  json.py  pdf.py  urls.py  (+1 more)
backend/scripts/: load_data_in_db.py  resobin_scrap_processing.py
(+115 files in other folders)
